# explore-bqss

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md
explore_bqss/: constants.py  data.py
notebooks/: 1-explore.py  2-finess-report.py
reports/: exploration-report.html
tests/: test_foo.py
